Added background image

--- a/Netflix.html
+++ b/Netflix.html
@@ -34,6 +34,14 @@
         </div>
 
     </header>
+
+    <section class="center-text">
+
+        <h1>Unlimited movies, TV shows and more</h1>
+        <p>Starts at ₹149. Cancel anytime.</p>
+        <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
+        
+    </section>
     
 </body>
 </html>
