--- a/Netflix.html
+++ b/Netflix.html
@@ -113,6 +113,26 @@
                 <img src="images/img5.webp" alt="">
             </div>
 
+            <div class="images-box">
+                <img src="images/img6.webp" alt="">
+            </div>
+
+            <div class="images-box">
+                <img src="images/img7.webp" alt="">
+            </div>
+
+            <div class="images-box">
+                <img src="images/img8.webp" alt="">
+            </div>
+
+            <div class="images-box">
+                <img src="images/img9.webp" alt="">
+            </div>
+
+            <div class="images-box">
+                <img src="images/img10.webp" alt="">
+            </div>
+
         </div>
 
         <div class="heading4">
