Adde something in the movie section

--- a/Netflix.html
+++ b/Netflix.html
@@ -43,7 +43,7 @@
         <section class="center-text">
     
             <div class="heading1">
-                <h1>Unlimited movies,<br>TV shows and more</h1>
+                <h1>Unlimited movies,TV <br>shows and more</h1>
             </div>
     
             <div class="plan">
@@ -94,42 +94,52 @@
         <div class="image-wrap">
 
             <div class="images-box">
+                <div class="number">1</div>
                 <img src="images/img1.webp" alt="">
             </div>
 
             <div class="images-box">
+                <div class="number">2</div>
                 <img src="images/img2.webp" alt="">
             </div>
 
             <div class="images-box">
+                <div class="number">3</div>
                 <img src="images/img3.webp" alt="">
             </div>
 
             <div class="images-box">
+                <div class="number">4</div>
                 <img src="images/img4.webp" alt="">
             </div>
 
             <div class="images-box">
+                <div class="number">5</div>
                 <img src="images/img5.webp" alt="">
             </div>
 
             <div class="images-box">
+                <div class="number">6</div>
                 <img src="images/img6.webp" alt="">
             </div>
 
             <div class="images-box">
+                <div class="number">7</div>
                 <img src="images/img7.webp" alt="">
             </div>
 
             <div class="images-box">
+                <div class="number">8</div>
                 <img src="images/img8.webp" alt="">
             </div>
 
             <div class="images-box">
+                <div class="number">9</div>
                 <img src="images/img9.webp" alt="">
             </div>
 
             <div class="images-box">
+                <div class="number">10</div>
                 <img src="images/img10.webp" alt="">
             </div>
 
