--- a/sign-in.html
+++ b/sign-in.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="new">
-                    <p>New to Netflix? <a href="Netflix.html">Sign up now.</a></p>
+                    <p>New to Netflix? <a href="index.html">Sign up now.</a></p>
                 </div>
 
                 <div class="bottom-text">
