--- a/index.html
+++ b/index.html
@@ -197,34 +197,104 @@
 
         <div class="question-box">
 
-            <div class="question">
-                <h3>What is Netflix?</h3>
-                <i class="fa-regular fa-plus"></i>
+            <div class="question-wrap">
+
+                <div class="question">
+                    <h3>What is Netflix?</h3>
+                    <i id="plus-icon" class="fa-regular fa-plus"></i>
+                </div>
+
+                <div class="answer hidden">
+                    <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies,
+                        anime, documentaries and more – on thousands of internet-connected devices.</span> <br>
+
+                    <span>You can watch as much as you want, whenever you want, without a single ad – all for one low
+                        monthly price. There's always something new to discover, and new TV shows and movies are added
+                        every week!</span>
+                </div>
+
             </div>
 
-            <div class="question">
-                <h3>How much does Netflix cost?</h3>
-                <i class="fa-regular fa-plus"></i>
+            <div class="question-wrap">
+
+                <div class="question">
+                    <h3>How much does Netflix cost?</h3>
+                    <i id="plus-icon" class="fa-regular fa-plus"></i>
+                </div>
+
+                <div class="answer hidden">
+                    <span>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one
+                        fixed monthly fee. Plans range from ₹149 to ₹649 a month. No extra costs, no contracts.</span>
+                </div>
+
             </div>
 
-            <div class="question">
-                <h3>Where can i watch?</h3>
-                <i class="fa-regular fa-plus"></i>
+            <div class="question-wrap">
+
+                <div class="question">
+                    <h3>Where can i watch?</h3>
+                    <i id="plus-icon" class="fa-regular fa-plus"></i>
+                </div>
+
+                <div class="answer hidden">
+                    <span>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at
+                        netflix.com from your personal computer or on any internet-connected device that offers the
+                        Netflix app, including smart TVs, smartphones, tablets, streaming media players and game
+                        consoles.</span> <br>
+
+                    <span>You can also download your favourite shows with the iOS or Android app. Use downloads to watch
+                        while you're on the go and without an internet connection. Take Netflix with you
+                        anywhere.</span>
+                </div>
+
             </div>
 
-            <div class="question">
-                <h3>How do i cancel?</h3>
-                <i class="fa-regular fa-plus"></i>
+            <div class="question-wrap">
+
+                <div class="question">
+                    <h3>How do i cancel?</h3>
+                    <i id="plus-icon" class="fa-regular fa-plus"></i>
+                </div>
+
+                <div class="answer hidden">
+                    <span>Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel
+                        your account online in two clicks. There are no cancellation fees – start or stop your account
+                        anytime.
+                    </span>
+                </div>
+
             </div>
 
-            <div class="question">
-                <h3>Where can i watch on Netflix?</h3>
-                <i class="fa-regular fa-plus"></i>
+            <div class="question-wrap">
+
+                <div class="question">
+                    <h3>Where can i watch on Netflix?</h3>
+                    <i id="plus-icon" class="fa-regular fa-plus"></i>
+                </div>
+
+                <div class="answer hidden">
+                    <span>Netflix has an extensive library of feature films, documentaries, TV shows, anime,
+                        award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</span>
+                </div>
+
             </div>
 
-            <div class="question">
-                <h3>Is Netflix good for Kids?</h3>
-                <i class="fa-regular fa-plus"></i>
+            <div class="question-wrap">
+
+                <div class="question">
+                    <h3>Is Netflix good for Kids?</h3>
+                    <i id="plus-icon" class="fa-regular fa-plus"></i>
+                </div>
+
+                <div class="answer hidden">
+                    <span>The Netflix Kids experience is included in your membership to give parents control while kids
+                        enjoy family-friendly TV shows and films in their own space.
+                    </span> <br>
+
+                    <span>Kids profiles come with PIN-protected parental controls that let you restrict the maturity
+                        rating of content kids can watch and block specific titles you don’t want kids to see.</span>
+                </div>
+
             </div>
 
         </div>
@@ -307,6 +377,9 @@
         </div>
 
     </footer>
+
+    <!-- custom js link -->
+    <script src="script.js"></script>
 
 </body>
 
