Worked on image wrap and added css improvements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix website clone</title>
+    <!-- font awesome links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -93,56 +94,68 @@
 
         </div>
 
-        <div class="image-wrap">
+        <div class="image-section">
 
-            <div class="images-box">
-                <div class="number">1</div>
-                <img src="images/img1.webp" alt="">
+            <div class="scroll-icon hidden" id="small-icon-left">
+                <i class="fa-solid fa-chevron-left"></i>
             </div>
 
-            <div class="images-box">
-                <div class="number">2</div>
-                <img src="images/img2.webp" alt="">
+            <div class="image-wrap">
+
+                <div class="images-box">
+                    <div class="number">1</div>
+                    <img src="images/img1.webp" alt="">
+                </div>
+
+                <div class="images-box">
+                    <div class="number">2</div>
+                    <img src="images/img2.webp" alt="">
+                </div>
+
+                <div class="images-box">
+                    <div class="number">3</div>
+                    <img src="images/img3.webp" alt="">
+                </div>
+
+                <div class="images-box">
+                    <div class="number">4</div>
+                    <img src="images/img4.webp" alt="">
+                </div>
+
+                <div class="images-box">
+                    <div class="number">5</div>
+                    <img src="images/img5.webp" alt="">
+                </div>
+
+                <div class="images-box">
+                    <div class="number">6</div>
+                    <img src="images/img6.webp" alt="">
+                </div>
+
+                <div class="images-box">
+                    <div class="number">7</div>
+                    <img src="images/img7.webp" alt="">
+                </div>
+
+                <div class="images-box">
+                    <div class="number">8</div>
+                    <img src="images/img8.webp" alt="">
+                </div>
+
+                <div class="images-box">
+                    <div class="number">9</div>
+                    <img src="images/img9.webp" alt="">
+                </div>
+
+                <div class="images-box">
+                    <div class="number">10</div>
+                    <img src="images/img10.webp" alt="">
+                </div>
+
             </div>
 
-            <div class="images-box">
-                <div class="number">3</div>
-                <img src="images/img3.webp" alt="">
-            </div>
-
-            <div class="images-box">
-                <div class="number">4</div>
-                <img src="images/img4.webp" alt="">
-            </div>
-
-            <div class="images-box">
-                <div class="number">5</div>
-                <img src="images/img5.webp" alt="">
-            </div>
-
-            <div class="images-box">
-                <div class="number">6</div>
-                <img src="images/img6.webp" alt="">
-            </div>
-
-            <div class="images-box">
-                <div class="number">7</div>
-                <img src="images/img7.webp" alt="">
-            </div>
-
-            <div class="images-box">
-                <div class="number">8</div>
-                <img src="images/img8.webp" alt="">
-            </div>
-
-            <div class="images-box">
-                <div class="number">9</div>
-                <img src="images/img9.webp" alt="">
-            </div>
-
-            <div class="images-box">
-                <div class="number">10</div>
-                <img src="images/img10.webp" alt="">
+            <div class="scroll-icon">
+                <i class="fa-solid fa-chevron-right"></i>
             </div>
 
         </div>
