--- a/sign-in.html
+++ b/sign-in.html
@@ -56,7 +56,7 @@
 
                 <div class="remember">
 
-                    <input type="checkbox">
+                    <input type="checkbox" checked>
                     <label for="checkbox">Remember me</label>
 
                 </div>
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="bottom-text">
-                    <p>This page is protected by Google reCAPTCHA to <br>ensure you're not a bot.
+                    <p>This page is protected by Google reCAPTCHA to <br>ensure you're not a bot. <br>
                         <a href="#">Learn more.</a>
                     </p>
                 </div>
@@ -82,24 +82,19 @@
         <div class="wrapper">
 
             <div class="contact">
-                <p>Questions? Call <a href="#">000-800-919-1694</a></p>
+                <p>Questions? Call 000-800-919-1743 (Toll-Free)</p>
             </div>
 
             <div class="foot-panel">
 
                 <ul>
 
-                    <div class="row1">
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Help Centre</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                        <li><a href="#">Privacy</a></li>
-                    </div>
-
-                    <div class="row2">
-                        <li><a href="#">Cookie Prefrences</a></li>
-                        <li><a href="#">Corporate Information</a></li>
-                    </div>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Help Centre</a></li>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Cookie Prefrences</a></li>
+                    <li><a href="#">Corporate Information</a></li>
 
                 </ul>
 
