Improved css and finished work on responsivenss

--- a/sign-in.html
+++ b/sign-in.html
@@ -14,9 +14,11 @@
 
         <div class="navbar">
 
-            <div class="logo">
-                <img src="images/Netflix-logo.png" alt="logo">
-            </div>
+            <a href="index.html">
+                <div class="logo">
+                    <img src="images/Netflix-logo.png" alt="logo">
+                </div>
+            </a>
 
         </div>
 
@@ -66,9 +68,8 @@
                 </div>
 
                 <div class="bottom-text">
-                    <p>This page is protected by Google reCAPTCHA to <br>ensure you're not a bot. <br>
-                        <a href="#">Learn more.</a>
-                    </p>
+                    <p>This page is protected by Google reCAPTCHA to <br>ensure you're not a bot.</p>
+                    <a href="#">Learn more.</a>
                 </div>
 
             </div>
