--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
         </header>
 
-        <section class="center-text">
+        <div class="center-text">
 
             <div class="heading1">
-                <h1>Unlimited movies,TV <br>shows and more</h1>
+                <h1>Unlimited movies,TV shows and more</h1>
             </div>
 
             <div class="plan">
@@ -70,7 +70,7 @@
 
             </form>
 
-        </section>
+        </div>
 
     </div>
 
@@ -344,34 +344,21 @@
         <div class="foot-panel">
 
             <ul>
-
-                <div class="row1">
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Help Centre</a></li>
-                    <li><a href="#">Account</a></li>
-                    <li><a href="#">Media Centre</a></li>
-                </div>
-
-                <div class="row2">
-                    <li><a href="#">Investor Relations</a></li>
-                    <li><a href="#">Jobs</a></li>
-                    <li><a href="#">Ways to Watch</a></li>
-                    <li><a href="#">Terms of Use</a></li>
-                </div>
-
-                <div class="row3">
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Cookie Prefrences</a></li>
-                    <li><a href="#">Corporate Information</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </div>
-
-                <div class="row4">
-                    <li><a href="#">Speed Test</a></li>
-                    <li><a href="#">Legal Notices</a></li>
-                    <li><a href="#">Only on Netflix</a></li>
-                </div>
-
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Help Centre</a></li>
+                <li><a href="#">Account</a></li>
+                <li><a href="#">Media Centre</a></li>
+                <li><a href="#">Investor Relations</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Ways to Watch</a></li>
+                <li><a href="#">Terms of Use</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Cookie Prefrences</a></li>
+                <li><a href="#">Corporate Information</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Speed Test</a></li>
+                <li><a href="#">Legal Notices</a></li>
+                <li><a href="#">Only on Netflix</a></li>
             </ul>
 
         </div>
