Worked more on responsiveness

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
             </div>
 
-            <form class="get-started">
+            <form class="get-started" id="get-started">
 
                 <div class="input-box" id="input-box">
                     <input id="input2" type="email" required>
