--- a/sign-in.html
+++ b/sign-in.html
@@ -31,13 +31,13 @@
                 </div>
 
                 <div class="input-box box1">
-                    <input type="email" required>
-                    <label>Email or mobile number</label>
+                    <input id="email" type="email" autocomplete="email" required>
+                    <label for="email">Email or mobile number</label>
                 </div>
 
                 <div class="input-box">
-                    <input type="email" required>
-                    <label>Password</label>
+                    <input id="Password" type="text" required>
+                    <label for="Password">Password</label>
                 </div>
 
                 <div class="button">
@@ -58,7 +58,7 @@
 
                 <div class="remember">
 
-                    <input type="checkbox" checked>
+                    <input id="checkbox" type="checkbox" checked>
                     <label for="checkbox">Remember me</label>
 
                 </div>
