--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <div class="select">
 
-                    <select>
+                    <select id="language" name="select">
                         <option value="english">English</option>
                         <option value="hindi">Hindi</option>
                     </select>
@@ -57,11 +57,11 @@
                 <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
             </div>
 
-            <form class="get-started">
+            <form id="form" class="get-started" name="get-started">
 
                 <div class="input-box">
-                    <input type="email" required>
-                    <label>Email address</label>
+                    <input id="email" type="email" name="email" autocomplete="email" required>
+                    <label for="email">Email address</label>
                 </div>
 
                 <div class="button2">
@@ -82,12 +82,12 @@
 
         <div class="options">
 
-            <select>
+            <select id="language2" name="select2">
                 <option value="india">India</option>
                 <option value="global">Global</option>
             </select>
 
-            <select>
+            <select id="language3" name="select3">
                 <option value="movies">Movies</option>
                 <option value="tv shows">TV Shows</option>
             </select>
@@ -318,11 +318,11 @@
                 <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
             </div>
 
-            <form class="get-started" id="get-started">
+            <form class="get-started" id="get-started" name="get-started2">
 
                 <div class="input-box" id="input-box">
-                    <input id="input2" type="email" required>
-                    <label>Email address</label>
+                    <input id="input2" type="email" name="email" autocomplete="email" required>
+                    <label for="input2">Email address</label>
                 </div>
 
                 <div class="button2">
