--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="Netflix.css">
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="images/Other/favicon.png">
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/Netflix.css">
 </head>
 
 <body>
@@ -19,7 +22,7 @@
         <header class="navbar">
 
             <div class="logo">
-                <img src="images/Netflix-logo.png" alt="logo">
+                <img src="images/Other/Netflix-logo.png" alt="logo">
             </div>
 
             <div class="wrap">
@@ -31,11 +34,13 @@
                         <option value="hindi">Hindi</option>
                     </select>
 
+                    <i class="fa-solid fa-caret-down" id="drop"></i>
+
                 </div>
 
                 <div class="button">
 
-                    <a href="sign-in.html"><button>Sign in</button></a>
+                    <a href="/pages/sign-in.html"><button>Sign in</button></a>
 
                 </div>
 
@@ -82,15 +87,23 @@
 
         <div class="options">
 
-            <select id="language2" name="select2">
-                <option value="india">India</option>
-                <option value="global">Global</option>
-            </select>
+            <div class="option">
+                <select id="language2" name="select2">
+                    <option value="india">India</option>
+                    <option value="global">Global</option>
+                </select>
 
-            <select id="language3" name="select3">
-                <option value="movies">Movies</option>
-                <option value="tv shows">TV Shows</option>
-            </select>
+                <i class="fa-solid fa-caret-down" id="drop"></i>
+            </div>
+
+            <div class="option" id="option2">
+                <select id="language3" name="select3">
+                    <option value="movies">Movies</option>
+                    <option value="tv shows">TV Shows</option>
+                </select>
+
+                <i class="fa-solid fa-caret-down" id="drop"></i>
+            </div>
 
         </div>
 
@@ -104,52 +117,52 @@
 
                 <div class="images-box">
                     <div class="number">1</div>
-                    <img src="images/img1.webp" alt="">
+                    <img src="images/Movies/img1.webp" alt="movie">
                 </div>
 
                 <div class="images-box">
                     <div class="number">2</div>
-                    <img src="images/img2.webp" alt="">
+                    <img src="images/Movies/img2.webp" alt="movie">
                 </div>
 
                 <div class="images-box">
                     <div class="number">3</div>
-                    <img src="images/img3.webp" alt="">
+                    <img src="images/Movies/img3.webp" alt="movie">
                 </div>
 
                 <div class="images-box">
                     <div class="number">4</div>
-                    <img src="images/img4.webp" alt="">
+                    <img src="images/Movies/img4.webp" alt="movie">
                 </div>
 
                 <div class="images-box">
                     <div class="number">5</div>
-                    <img src="images/img5.webp" alt="">
+                    <img src="images/Movies/img5.webp" alt="movie">
                 </div>
 
                 <div class="images-box">
                     <div class="number">6</div>
-                    <img src="images/img6.webp" alt="">
+                    <img src="images/Movies/img6.webp" alt="movie">
                 </div>
 
                 <div class="images-box">
                     <div class="number">7</div>
-                    <img src="images/img7.webp" alt="">
+                    <img src="images/Movies/img7.webp" alt="movie">
                 </div>
 
                 <div class="images-box">
                     <div class="number">8</div>
-                    <img src="images/img8.webp" alt="">
+                    <img src="images/Movies/img8.webp" alt="movie">
                 </div>
 
                 <div class="images-box">
                     <div class="number">9</div>
-                    <img src="images/img9.webp" alt="">
+                    <img src="images/Movies/img9.webp" alt="movie">
                 </div>
 
                 <div class="images-box">
                     <div class="number">10</div>
-                    <img src="images/img10.webp" alt="">
+                    <img src="images/Movies/img10.webp" alt="movie">
                 </div>
 
             </div>
@@ -173,6 +186,8 @@
                     <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
                 </div>
 
+                <img src="/images/reasons/image1.png" alt="">
+
             </div>
 
             <div class="box">
@@ -181,6 +196,8 @@
                     <h3>Download your shows to watch offline</h3>
                     <p>Save your favourites easily and always have something to watch.</p>
                 </div>
+
+                <img src="/images/reasons/image2.png" alt="">
 
             </div>
 
@@ -191,6 +208,8 @@
                     <p>Stream unlimited movies and TV shows on your phone, tablet, laptop and TV.</p>
                 </div>
 
+                <img src="/images/reasons/image3.png" alt="">
+
             </div>
 
             <div class="box">
@@ -200,6 +219,8 @@
                     <p>Send kids on adventures with their favourite characters in a space made just for them —
                         free with your membership.</p>
                 </div>
+
+                <img src="/images/reasons/image4.png" alt="">
             </div>
 
         </div>
@@ -363,12 +384,14 @@
 
         </div>
 
-        <div class="select">
+        <div class="select" id="foot">
 
-            <select id="foot">
+            <select>
                 <option value="english">English</option>
                 <option value="hindi">Hindi</option>
             </select>
+
+            <i class="fa-solid fa-caret-down" id="drop"></i>
 
         </div>
 
@@ -379,7 +402,7 @@
     </footer>
 
     <!-- custom js link -->
-    <script src="script.js"></script>
+    <script src="Js/script.js"></script>
 
 </body>
 
