--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netlflix sign in page</title>
-    <link rel="stylesheet" href="sign-in.css">
+    <!-- font awesome links -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="/images/Other/favicon.png">
+    <!-- custom css -->
+    <link rel="stylesheet" href="/css/sign-in.css">
 </head>
 
 <body>
@@ -14,9 +21,9 @@
 
         <div class="navbar">
 
-            <a href="index.html">
+            <a href="/index.html">
                 <div class="logo">
-                    <img src="images/Netflix-logo.png" alt="logo">
+                    <img src="/images/Other/Netflix-logo.png" alt="logo">
                 </div>
             </a>
 
@@ -64,7 +71,7 @@
                 </div>
 
                 <div class="new">
-                    <p>New to Netflix? <a href="index.html">Sign up now.</a></p>
+                    <p>New to Netflix? <a href="/index.html">Sign up now.</a></p>
                 </div>
 
                 <div class="bottom-text">
@@ -107,6 +114,8 @@
                     <option value="english">English</option>
                     <option value="hindi">Hindi</option>
                 </select>
+
+                <i class="fa-solid fa-caret-down" id="drop"></i>
 
             </div>
 
