Final responsiveness improvements

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
                 </div>
 
-                <img src="/images/reasons/image1.png" alt="">
+                <img src="/images/reasons/image1.png" alt="box-icon">
 
             </div>
 
@@ -197,7 +197,7 @@
                     <p>Save your favourites easily and always have something to watch.</p>
                 </div>
 
-                <img src="/images/reasons/image2.png" alt="">
+                <img src="/images/reasons/image2.png" alt="box-icon">
 
             </div>
 
@@ -208,7 +208,7 @@
                     <p>Stream unlimited movies and TV shows on your phone, tablet, laptop and TV.</p>
                 </div>
 
-                <img src="/images/reasons/image3.png" alt="">
+                <img src="/images/reasons/image3.png" alt="box-icon">
 
             </div>
 
@@ -220,7 +220,7 @@
                         free with your membership.</p>
                 </div>
 
-                <img src="/images/reasons/image4.png" alt="">
+                <img src="/images/reasons/image4.png" alt="box-icon">
             </div>
 
         </div>
